@@ -23,12 +23,12 @@ public class AccountCommandDispatcher implements CommandDispatcher {
     @Override
     public void send(BaseCommand command) {
         var handlers = routes.get(command.getClass());
-        if (handlers == null || handlers.size() == 0) {
+        if (handlers == null || handlers.isEmpty()) {
             throw new RuntimeException("No command handler was registered!");
         }
         if (handlers.size() > 1) {
             throw new RuntimeException("Cannot send command to more than one handler!");
         }
-        handlers.get(0).handle(command);
+        handlers.getFirst().handle(command);
     }
 }
