@@ -8,7 +8,6 @@ import com.techbank.cqrs.core.exceptions.AggregateNotFoundException;
 import com.techbank.cqrs.core.exceptions.ConcurrencyException;
 import com.techbank.cqrs.core.infrastructure.EventStore;
 import com.techbank.cqrs.core.producers.EventProducer;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.Date;
@@ -17,16 +16,18 @@ import java.util.stream.Collectors;
 
 @Service
 public class AccountEventStore implements EventStore {
-    @Autowired
-    private EventProducer eventProducer;
+    private final EventProducer eventProducer;
+    private final EventStoreRepository eventStoreRepository;
 
-    @Autowired
-    private EventStoreRepository eventStoreRepository;
+    public AccountEventStore(EventProducer eventProducer, EventStoreRepository eventStoreRepository) {
+        this.eventProducer = eventProducer;
+        this.eventStoreRepository = eventStoreRepository;
+    }
 
     @Override
     public void saveEvents(String aggregateId, Iterable<BaseEvent> events, int expectedVersion) {
         var eventStream = eventStoreRepository.findByAggregateIdentifier(aggregateId);
-        if (expectedVersion != -1 && eventStream.get(eventStream.size() - 1).getVersion() != expectedVersion) {
+        if (expectedVersion != -1 && eventStream.getLast().getVersion() != expectedVersion) {
             throw new ConcurrencyException();
         }
         var version = expectedVersion;
@@ -54,13 +55,13 @@ public class AccountEventStore implements EventStore {
         if (eventStream == null || eventStream.isEmpty()) {
             throw new AggregateNotFoundException("Incorrect account ID provided!");
         }
-        return eventStream.stream().map(x -> x.getEventData()).collect(Collectors.toList());
+        return eventStream.stream().map(EventModel::getEventData).collect(Collectors.toList());
     }
 
     @Override
     public List<String> getAggregateIds() {
         var eventStream = eventStoreRepository.findAll();
-        if (eventStream == null || eventStream.isEmpty()) {
+        if (eventStream.isEmpty()) {
             throw new IllegalStateException("Could not retrieve event stream from the event store!");
         }
         return eventStream.stream().map(EventModel::getAggregateIdentifier).distinct().collect(Collectors.toList());
